[gd_scene load_steps=2 format=3 uid="uid://c1f8hjf40nr8k"]

[ext_resource type="Script" path="res://addons/quest_manager/Editor/Quest_Step_Nodes/items_step.gd" id="1_xb21r"]

[node name="ItemStep" type="GraphNode"]
custom_minimum_size = Vector2(200, 350)
offset_right = 200.0
offset_bottom = 325.0
tooltip_text = "Item Quest Steps are Similar to Action Quest Steps but requires multiple actions to be completed.
Useful for Collecting unique items or completing unique tasks in one Step."
title = "Items Step"
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0, 1, 0, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0, 1, 0, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1_xb21r")
Node_Type = 3

[node name="ItemList" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="details" type="TextEdit" parent="ItemList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Step Details"

[node name="ScrollContainer" type="ScrollContainer" parent="ItemList"]
layout_mode = 2
size_flags_vertical = 3

[node name="list" type="ItemList" parent="ItemList/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
auto_height = true
item_count = 1
item_0/text = ""

[node name="ItemEdit" type="LineEdit" parent="ItemList"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Item Name"
caret_blink = true
caret_blink_interval = 0.5

[node name="Add" type="Button" parent="ItemList"]
layout_mode = 2
text = "ADD ITEM"

[node name="Remove" type="Button" parent="ItemList"]
layout_mode = 2
text = "REMOVE"

[connection signal="item_selected" from="ItemList/ScrollContainer/list" to="." method="_on_list_item_selected"]
[connection signal="pressed" from="ItemList/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="ItemList/Remove" to="." method="_on_remove_pressed"]
